# storage/api-docs/api-docs.json
@@ -619,6 +619,44 @@
                 ]
             }
         },
+        "/my-application-count": {
+            "get": {
+                "tags": [
+                    "Application"
+                ],
+                "summary": "My-application-count list",
+                "description": "index",
+                "operationId": "my-applicationcount",
+                "parameters": [
+                    {
+                        "name": "category_id",
+                        "in": "query",
+                        "description": "category_id to filter by",
+                        "required": false,
+                        "style": "form",
+                        "schema": {
+                            "type": "number"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/login": {
             "post": {
                 "tags": [
